--- a/api/.env-example
+++ b/api/.env-example
@@ -1,3 +1,7 @@
 CORS_ENV_HTTP_URL=
 CORS_ENV_HTTPS_URL=
 DATABASE_URL=
+SENDGRID_API_KEY=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
